--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -4,4 +4,9 @@
   --color-white: #ffffff;
   --color-black: #000000;
   --color-gray: #bbb6b6;
+  --vaadin-button-tertiary-text-color: var(--color-orange);
+  --vaadin-focus-ring-color: var(--color-orange);
+  --vaadin-card-background: rgba(252, 99, 4, 0.1);
+  --lumo-primary-color-10pct: rgba(252, 99, 4, 0.1);
+  --vaadin-selection-color: var(--color-orange);
 }
